# pdf-splitter

./: .pre-commit-config.yaml  Makefile  README.md  demo_split.py  pyproject.toml  requirements.txt  validate_docling_output.py
.github/workflows/: ci.yml
src/: __init__.py  cli.py  config_factory.py  logging_config.py  processor.py  reassembly.py  segmentation.py  segmentation_enhanced.py  validation.py
src/pdf_splitter/: config_factory.py  processor.py
tests/: test_cli.py  test_concatenation.py  test_config_factory.py  test_integration.py  test_processor.py  test_reassembly.py  test_segmentation.py  test_smart_split.py
