[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-splitter"
version = "0.1.0"
description = "A scalable PDF splitting framework for parallel document processing using Docling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "runyaga" }
]
keywords = ["pdf", "docling", "document-processing", "parallel-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "docling>=1.16.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
profiling = [
    "memory-profiler>=0.61.0",
]

[project.scripts]
pdf-splitter = "src.cli:main"

[project.urls]
Homepage = "https://github.com/runyaga/pdf-splitter"
Documentation = "https://github.com/runyaga/pdf-splitter#readme"
Repository = "https://github.com/runyaga/pdf-splitter"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:docling_core.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
